--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,10 +24,16 @@
           <ul class="navbar-nav">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to current_user.email, edit_user_registration_path, class: "nav-link" %>
+                <%= link_to current_user.email, homes_index_path, class: "nav-link" %>
               </li>
               <li class="nav-item">
                 <%= link_to "Cerrar sesión", destroy_user_session_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Clientes", clients_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Llamadas", calls_path, class: "nav-link" %>
               </li>
             <% else %>
               <li class="nav-item">
